MINOR: Rebase dev branch on current trunk